--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-iconfont": "^5.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-merge": "^0.1.1",
+    "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
